# 2026FifaWorldCupTippingCompetition

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
data/: fixtures.json  groups.json  registry.json
deploy/: cloudflared-tunnel.example.yml  install-systemd.sh  world-cup-tipping.env.example
docs/: DEPLOYMENT.md
examples/fixed_fastapi_server/: README.md  server.py
examples/random_fastapi_server/: README.md  server.py
scripts/: analyse_group_stage.py
tests/: test_import_schedule.py  test_result_scraper.py  test_routes.py  test_runner.py  test_runner_integration.py  test_scoring.py  test_simulation.py
world_cup_tipping/: __init__.py  cron.py  import_schedule.py  main.py  models.py  result_scraper.py  runner.py  scoring.py  simulation.py  storage.py
world_cup_tipping/static/: app.js  styles.css
world_cup_tipping/templates/: admin.html  api_test.html  base.html  bracket.html  contestant.html  leaderboard.html  schedule.html  tips.html  today.html
