[project]
name = "world-cup-tipping"
version = "0.1.0"
description = "JSON-only FastAPI app for a FIFA World Cup tipping competition."
requires-python = ">=3.12"
dependencies = [
  "cryptography>=48.0.0",
  "fastapi",
  "httpx",
  "jinja2",
  "python-multipart",
  "uvicorn[standard]",
]

[dependency-groups]
dev = [
  "pytest",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = [
  ".",
]
